force-app/main/default/objects/Account/fields/Account_Address__c.field-meta.xml
<CustomField>
    <fullName>Account_Address__c</fullName>
    <description>רחוב- מלל חופשי</description>
    <inlineHelpText>Fill address in this free text field only if address does not exist in the database</inlineHelpText>
    <label>Street - Free Text</label>
    <length>100</length>
    <type>Text</type>
</CustomField>