force-app/main/default/objects/Account/fields/Account_City__c.field-meta.xml
<CustomField>
    <fullName>Account_City__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>עיר</description>
    <label>Account City</label>
    <referenceTo>City__c</referenceTo>
    <relationshipLabel>ארגונים</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>