force-app/main/default/objects/Account/fields/Account_Street__c.field-meta.xml
<CustomField>
    <fullName>Account_Street__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>רחוב</description>
    <label>Account Street</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Street__c.City__c</field>
            <operation>equals</operation>
            <valueField>$Source.Account_City__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Street__c</referenceTo>
    <relationshipLabel>ארגונים</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>