force-app/main/default/objects/Account/fields/Address_Home_Num__c.field-meta.xml
<CustomField>
    <fullName>Address_Home_Num__c</fullName>
    <description>מספר בית</description>
    <label>Address Home Num</label>
    <length>10</length>
    <type>Text</type>
</CustomField>