force-app/main/default/objects/Account/fields/Affiliation_To_Application__c.field-meta.xml
<CustomField>
    <fullName>Affiliation_To_Application__c</fullName>
    <description>שיוך למערכות</description>
    <label>Affiliation To Application</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>זירת מעסיקים</fullName>
                <default>true</default>
                <label>זירת מעסיקים</label>
            </value>
            <value>
                <fullName>ממשק לפרט</fullName>
            </value>
            <value>
                <fullName>זירת מעסיקים וממשק לפרט</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>