force-app/main/default/objects/Account/fields/Business_Fields__c.field-meta.xml
<CustomField>
    <fullName>Business_Fields__c</fullName>
    <label>Business Fields</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>חקלאות, ייעור ודיג</fullName>
            </value>
            <value>
                <fullName>תעשייה, כריה וחציבה</fullName>
            </value>
            <value>
                <fullName>אספקת מים ואספקת חשמל , גז, מיזוג אוויר ושירותי פסולת</fullName>
            </value>
            <value>
                <fullName>בינוי</fullName>
            </value>
            <value>
                <fullName>מסחר סיטונאי, קמעוני</fullName>
            </value>
            <value>
                <fullName>תיקון כלי רכב</fullName>
            </value>
            <value>
                <fullName>שירותי תחבורה, אחסנה, דואר ובלדרות</fullName>
            </value>
            <value>
                <fullName>שירותי אירוח ואוכל</fullName>
            </value>
            <value>
                <fullName>מערכות מידע, תקשורת, הפקות והוצאה לאור</fullName>
            </value>
            <value>
                <fullName>שירותים פיננסיים, שירותי ביטוח ופעילויות בנדל&quot;ן</fullName>
            </value>
            <value>
                <fullName>שירותים מקצועיים, מדעיים וטכניים ושירותי ניהול ותמיכה</fullName>
            </value>
            <value>
                <fullName>חינוך</fullName>
            </value>
            <value>
                <fullName>שירותי בריאות, רווחה וסעד</fullName>
            </value>
            <value>
                <fullName>תכנות, מחשבים, ייעוץ בתחום המחשבים ושירותים נלווים אחרים</fullName>
            </value>
            <value>
                <fullName>שירותי תקשורת</fullName>
            </value>
            <value>
                <fullName>שירותי מידע</fullName>
            </value>
            <value>
                <fullName>מו&quot;פ (למעט 722 מו&quot;פ במדעי החברה והרוח)</fullName>
            </value>
            <value>
                <fullName>ייצור תרופות קונבנציונליות ותרופות הומאופתיות</fullName>
            </value>
            <value>
                <fullName>ייצור מחשבים, מכשור אלקטרוני ואופטי</fullName>
            </value>
            <value>
                <fullName>ייצור כלי טיס, חלליות וציוד נלווה</fullName>
            </value>
            <value>
                <fullName>ייצור כימיקלים ומוצריהם</fullName>
            </value>
            <value>
                <fullName>ייצור נשק ותחמושת</fullName>
            </value>
            <value>
                <fullName>ייצור ציוד חשמלי</fullName>
            </value>
            <value>
                <fullName>אחר-הייטק</fullName>
            </value>
            <value>
                <fullName>אחר</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>