force-app/main/default/objects/Account/fields/Business_Id__c.field-meta.xml
<CustomField>
    <fullName>Business_Id__c</fullName>
    <description>מספר ח.פ. / עוסק מורשה</description>
    <externalId>true</externalId>
    <label>Business Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>