force-app/main/default/objects/Account/fields/BusinessCluster__c.field-meta.xml
<CustomField>
    <fullName>BusinessCluster__c</fullName>
    <description>אשכולות</description>
    <label>Business Cluster</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Galilee and valleys</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Western Galilee</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Eastern Galilee</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Eastern Negev</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Western Negev</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>Beit Hakerem</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>Hasharon</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>Kinneret and valleys</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>Hamifratz authorities</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>Southern Sorek</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>Yosh</label>
            </value>
            <value>
                <fullName>בית הכרם</fullName>
                <isActive>false</isActive>
                <label>בית הכרם</label>
            </value>
            <value>
                <fullName>גליל והעמקים</fullName>
                <isActive>false</isActive>
                <label>גליל והעמקים</label>
            </value>
            <value>
                <fullName>גליל מזרחי</fullName>
                <isActive>false</isActive>
                <label>גליל מזרחי</label>
            </value>
            <value>
                <fullName>גליל מערבי</fullName>
                <isActive>false</isActive>
                <label>גליל מערבי</label>
            </value>
            <value>
                <fullName>השרון</fullName>
                <isActive>false</isActive>
                <label>השרון</label>
            </value>
            <value>
                <fullName>יו&quot;ש</fullName>
                <isActive>false</isActive>
                <label>יו&quot;ש</label>
            </value>
            <value>
                <fullName>כנרת והעמקים</fullName>
                <isActive>false</isActive>
                <label>כנרת והעמקים</label>
            </value>
            <value>
                <fullName>נגב מזרחי</fullName>
                <isActive>false</isActive>
                <label>נגב מזרחי</label>
            </value>
            <value>
                <fullName>נגב מערבי</fullName>
                <isActive>false</isActive>
                <label>נגב מערבי</label>
            </value>
            <value>
                <fullName>רשויות המפרץ</fullName>
                <isActive>false</isActive>
                <label>רשויות המפרץ</label>
            </value>
            <value>
                <fullName>שורק דרומי</fullName>
                <isActive>false</isActive>
                <label>שורק דרומי</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>