force-app/main/default/objects/Account/fields/CEO_Name1__c.field-meta.xml
<CustomField>
    <fullName>CEO_Name1__c</fullName>
    <description>שם היו&quot;ר או המנכ&quot;ל 1</description>
    <label>CEO Name1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>