force-app/main/default/objects/Account/fields/CEO_Name2__c.field-meta.xml
<CustomField>
    <fullName>CEO_Name2__c</fullName>
    <description>שם היו&quot;ר או המנכ&quot;ל 2</description>
    <label>CEO Name2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>