force-app/main/default/objects/Account/fields/CollectiveBuisnessOrg__c.field-meta.xml
<CustomField>
    <fullName>CollectiveBuisnessOrg__c</fullName>
    <description>ארגון גג/איגוד</description>
    <label>Collective Buisness Org</label>
    <length>255</length>
    <type>Text</type>
</CustomField>