force-app/main/default/objects/Account/fields/College_ID__c.field-meta.xml
<CustomField>
    <fullName>College_ID__c</fullName>
    <label>College ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>