force-app/main/default/objects/Account/fields/Company_Type__c.field-meta.xml
<CustomField>
    <fullName>Company_Type__c</fullName>
    <label>Company Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Parent_Company</fullName>
                <label>הארגון הוא חברת אם</label>
            </value>
            <value>
                <fullName>Child_Company</fullName>
                <label>הארגון הוא חברת בת</label>
            </value>
            <value>
                <fullName>ללא שיוך</fullName>
                <default>true</default>
                <label>ללא שיוך</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>