force-app/main/default/objects/Account/fields/ConvertedFromLead__c.field-meta.xml
<CustomField>
    <fullName>ConvertedFromLead__c</fullName>
    <defaultValue>false</defaultValue>
    <description>נוצר באמצעות אובייקט ליד</description>
    <label>Converted From Lead</label>
    <type>Checkbox</type>
</CustomField>