force-app/main/default/objects/Account/fields/Deduction_file_ID__c.field-meta.xml
<CustomField>
    <fullName>Deduction_file_ID__c</fullName>
    <label>Deduction file ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>