force-app/main/default/objects/Account/fields/DeductionsFile__c.field-meta.xml
<CustomField>
    <fullName>DeductionsFile__c</fullName>
    <description>מספר תיק ניכויים</description>
    <label>Deductions File</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>