force-app/main/default/objects/Account/fields/Email2_Mimshak_Laprat__c.field-meta.xml
<CustomField>
    <fullName>Email2_Mimshak_Laprat__c</fullName>
    <description>כתובת דוא&quot;ל 2 ממשק לפרט</description>
    <label>Email2 Mimshak Laprat</label>
    <type>Email</type>
</CustomField>