force-app/main/default/objects/Account/fields/Email_Mimshak_Laprat__c.field-meta.xml
<CustomField>
    <fullName>Email_Mimshak_Laprat__c</fullName>
    <description>כתובת דוא&quot;ל ממשק לפרט</description>
    <label>Email Mimshak Laprat</label>
    <type>Email</type>
</CustomField>