force-app/main/default/objects/Account/fields/Employees__c.field-meta.xml
<CustomField>
    <fullName>Employees__c</fullName>
    <label>Employees</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>עד 10</fullName>
            </value>
            <value>
                <fullName>10-30</fullName>
            </value>
            <value>
                <fullName>30-50</fullName>
            </value>
            <value>
                <fullName>50-100</fullName>
            </value>
            <value>
                <fullName>100-250</fullName>
            </value>
            <value>
                <fullName>250-500</fullName>
            </value>
            <value>
                <fullName>+ 500</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>