force-app/main/default/objects/Account/fields/Expired_Vouchers_Counter__c.field-meta.xml
<CustomField>
    <fullName>Expired_Vouchers_Counter__c</fullName>
    <defaultValue>0</defaultValue>
    <description>ספירת שוברים שפגו תוקף בשנה קלנדרית במסגרת תוכנית שובר למעסיק</description>
    <label>Expired Vouchers Counter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>