force-app/main/default/objects/Account/fields/Field1__c.field-meta.xml
<CustomField>
    <fullName>Field1__c</fullName>
    <formula>IF( Business_Id__c =&quot;&quot;,
IMAGE(&quot;/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Png&amp;versionId=0682z0000001z9z&amp;operationContext=CHATTER&amp;contentId=05T2z0000003PUK&quot; , &quot;חסר חפ ללקוח&quot;
 ,25 , 25) ,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>.</label>
    <type>Text</type>
</CustomField>