force-app/main/default/objects/Account/fields/Geographical_layout__c.field-meta.xml
<CustomField>
    <fullName>Geographical_layout__c</fullName>
    <label>Geographical layout</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ארצי</fullName>
            </value>
            <value>
                <fullName>צפון</fullName>
            </value>
            <value>
                <fullName>מרכז</fullName>
            </value>
            <value>
                <fullName>אזור ירושלים</fullName>
            </value>
            <value>
                <fullName>דרום</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>