force-app/main/default/objects/Account/fields/IndustryParkClusters__c.field-meta.xml
<CustomField>
    <fullName>IndustryParkClusters__c</fullName>
    <description>פארקי תעשיה</description>
    <label>Industry Park Clusters</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>אבו קורינאת</fullName>
            </value>
            <value>
                <fullName>אבשלום</fullName>
            </value>
            <value>
                <fullName>אום אלפחם</fullName>
            </value>
            <value>
                <fullName>אזור התעשייה במ.א אלקאסום (אום בטין, אלסייד)</fullName>
            </value>
            <value>
                <fullName>אזורי התעשייה באופקים</fullName>
            </value>
            <value>
                <fullName>אזורי התעשייה מטה בנימין</fullName>
            </value>
            <value>
                <fullName>אזורי התעשייה קרית מלאכי (תימורים ואזור צפוני)</fullName>
            </value>
            <value>
                <fullName>אלון תבור</fullName>
            </value>
            <value>
                <fullName>אלפי מנשה</fullName>
            </value>
            <value>
                <fullName>באר שבע</fullName>
            </value>
            <value>
                <fullName>בני יהודה</fullName>
            </value>
            <value>
                <fullName>בר לב</fullName>
            </value>
            <value>
                <fullName>בראון</fullName>
            </value>
            <value>
                <fullName>ברקן</fullName>
            </value>
            <value>
                <fullName>גורן</fullName>
            </value>
            <value>
                <fullName>דימונה</fullName>
            </value>
            <value>
                <fullName>דלתון</fullName>
            </value>
            <value>
                <fullName>הר החוצבים</fullName>
            </value>
            <value>
                <fullName>טבריה</fullName>
            </value>
            <value>
                <fullName>טייבה</fullName>
            </value>
            <value>
                <fullName>טירה</fullName>
            </value>
            <value>
                <fullName>טמרה</fullName>
            </value>
            <value>
                <fullName>ירוחם</fullName>
            </value>
            <value>
                <fullName>כפר קאסם</fullName>
            </value>
            <value>
                <fullName>כרמיאל</fullName>
            </value>
            <value>
                <fullName>מבוא כרמל</fullName>
            </value>
            <value>
                <fullName>מישור אדומים</fullName>
            </value>
            <value>
                <fullName>מישור רותם</fullName>
            </value>
            <value>
                <fullName>מע&apos;אר</fullName>
            </value>
            <value>
                <fullName>מעלה אפרים</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>