force-app/main/default/objects/Account/fields/Multiple_locations__c.field-meta.xml
<CustomField>
    <fullName>Multiple_locations__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Multiple locations</label>
    <type>Checkbox</type>
</CustomField>