force-app/main/default/objects/Account/fields/No_Accurate_Address__c.field-meta.xml
<CustomField>
    <fullName>No_Accurate_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <description>אין כתובת מדויקת</description>
    <label>No Accurate Address</label>
    <type>Checkbox</type>
</CustomField>