force-app/main/default/objects/Account/fields/Organization_Type__c.field-meta.xml
<CustomField>
    <fullName>Organization_Type__c</fullName>
    <label>Organization Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>חברה פרטית</fullName>
            </value>
            <value>
                <fullName>עוסק מורשה</fullName>
            </value>
            <value>
                <fullName>תאגיד</fullName>
            </value>
            <value>
                <fullName>עמותה</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>