force-app/main/default/objects/Account/fields/Parent_Company__c.field-meta.xml
<CustomField>
    <fullName>Parent_Company__c</fullName>
    <description>שם ארגון אב</description>
    <label>Parent Company</label>
    <length>100</length>
    <type>Text</type>
</CustomField>