force-app/main/default/objects/Account/fields/ProgramAffiliations__c.field-meta.xml
<CustomField>
    <fullName>ProgramAffiliations__c</fullName>
    <label>ProgramAffiliations</label>
    <length>255</length>
    <type>Text</type>
</CustomField>