force-app/main/default/objects/Account/fields/Service_provider__c.field-meta.xml
<CustomField>
    <fullName>Service_provider__c</fullName>
    <description>סוג נותן שירות</description>
    <label>Service provider</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Partner__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>יחידה של זרוע עבודה</fullName>
            </value>
            <value>
                <fullName>ספק רישוי לעיסוק</fullName>
            </value>
            <value>
                <fullName>1</fullName>
                <label>College</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Operator</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Zrua Avudas unit</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Occupation licensing provider</label>
            </value>
            <value>
                <fullName>מכללה</fullName>
            </value>
            <value>
                <fullName>מפעיל</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>