force-app/main/default/objects/Account/fields/Short_Description__c.field-meta.xml
<CustomField>
    <fullName>Short_Description__c</fullName>
    <description>הסבר קצר על פעילות עסקית</description>
    <label>Short Explanation Business Activity</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>