force-app/main/default/objects/Account/fields/Stop_Icon__c.field-meta.xml
<CustomField>
    <fullName>Stop_Icon__c</fullName>
    <formula>IF( Business_Id__c =&quot;&quot;,
IMAGE(&quot;https://ministryoflabor--c.documentforce.com/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Png&amp;versionId=0684K000000k3RZ&amp;operationContext=CHATTER&amp;contentId=05T4K000009ALEC&quot; , &quot;חסר חפ ללקוח&quot;
,25 , 25) ,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>.</label>
    <type>Text</type>
</CustomField>