force-app/main/default/objects/Account/recordTypes/ServiceSupplier.recordType-meta.xml
<RecordType>
    <fullName>ServiceSupplier</fullName>
    <active>false</active>
    <label>Service Supplier</label>
</RecordType>