force-app/main/default/objects/Account/validationRules/Child_Company_AccountName.validationRule-meta.xml
<ValidationRule>
    <fullName>Child_Company_AccountName</fullName>
    <active>false</active>
    <description>If the selected value in company type is &quot;child company&quot;, the user must insert the Parent account Name</description>
    <errorConditionFormula>ISPICKVAL(Company_Type__c  , &apos;Child_Company&apos;)&amp;&amp;  Parent_Company__c = &quot;&quot; &amp;&amp; ParentId =&quot;&quot;</errorConditionFormula>
    <errorMessage>Company type is &quot;child company&quot;, Parent account Name must be filled</errorMessage>
</ValidationRule>