force-app/main/default/objects/Account/validationRules/Child_Company_ParentAccount.validationRule-meta.xml
<ValidationRule>
    <fullName>Child_Company_ParentAccount</fullName>
    <active>true</active>
    <description>If the selected value in company type is &quot;child company&quot;, the user must insert the Parent account</description>
    <errorConditionFormula>ISPICKVAL(Company_Type__c  , &apos;Child_Company&apos;)&amp;&amp; ParentId  = &quot;&quot;&amp;&amp; Parent_Company__c =&quot;&quot;</errorConditionFormula>
    <errorMessage>Company type is &quot;child company&quot;. Choose parent account or fill parent account name</errorMessage>
</ValidationRule>