force-app/main/default/objects/Account/validationRules/College_ID_Not_Needed.validationRule-meta.xml
<ValidationRule>
    <fullName>College_ID_Not_Needed</fullName>
    <active>true</active>
    <description>If the Service provider selected value is Not College- the user Shouldn&apos;t enter College ID</description>
    <errorConditionFormula>NOT(ISPICKVAL(Service_provider__c  , &quot;מכללה&quot;))&amp;&amp; NOT(ISBLANK( College_ID__c ))</errorConditionFormula>
    <errorDisplayField>College_ID__c</errorDisplayField>
    <errorMessage>College ID should be empty when Service provider is Not College</errorMessage>
</ValidationRule>