force-app/main/default/objects/Account/validationRules/Correct_BusinessID.validationRule-meta.xml
<ValidationRule>
    <fullName>Correct_BusinessID</fullName>
    <active>true</active>
    <description>Correct BusinessID is a 9 digits number</description>
    <errorConditionFormula>IF(Business_Id__c = &quot;&quot;,NULL , OR(
NOT(ISNUMBER(Business_Id__c )),
AND(ISNUMBER(Business_Id__c ), LEN(Business_Id__c ) &lt;&gt;9)
))</errorConditionFormula>
    <errorDisplayField>Business_Id__c</errorDisplayField>
    <errorMessage>Correct BusinessID is a 9 digits number</errorMessage>
</ValidationRule>