force-app/main/default/objects/Account/validationRules/Not_Child_Company_AccountName.validationRule-meta.xml
<ValidationRule>
    <fullName>Not_Child_Company_AccountName</fullName>
    <active>true</active>
    <description>If the selected value in company type is not &quot;child company&quot;, the user won&apos;t be able to insert the parent account name</description>
    <errorConditionFormula>NOT(ISPICKVAL(Company_Type__c  , &apos;Child_Company&apos;))
&amp;&amp;  Parent_Company__c &lt;&gt; &quot;&quot;</errorConditionFormula>
    <errorDisplayField>Parent_Company__c</errorDisplayField>
    <errorMessage>Cannot save parent company for a company that does not a child company. Delete the parent company name or change the company type to child company.</errorMessage>
</ValidationRule>