force-app/main/default/objects/Account/validationRules/Not_Child_Company_ParentAccount.validationRule-meta.xml
<ValidationRule>
    <fullName>Not_Child_Company_ParentAccount</fullName>
    <active>true</active>
    <description>If the selected value in company type is not &quot;child company&quot;, the user won&apos;t be able to insert the Parent account</description>
    <errorConditionFormula>NOT(ISPICKVAL(Company_Type__c  , &apos;Child_Company&apos;))
&amp;&amp; ParentId  &lt;&gt; &quot;&quot;</errorConditionFormula>
    <errorMessage>Cannot save parent company for a company that does not a child company. Delete the parent company name or change the company type to child company.</errorMessage>
</ValidationRule>