force-app/main/default/objects/Account/validationRules/Service_Provider_Not_Null.validationRule-meta.xml
<ValidationRule>
    <fullName>Service_Provider_Not_Null</fullName>
    <active>true</active>
    <description>If an Account is a partner, the Service provider field must be not Null</description>
    <errorConditionFormula>Partner__c = true &amp;&amp;  ISPICKVAL( Service_provider__c , &quot;&quot;)</errorConditionFormula>
    <errorDisplayField>Service_provider__c</errorDisplayField>
    <errorMessage>Select Service provider</errorMessage>
</ValidationRule>