force-app/main/default/objects/Account/listViews/AllAccounts.listView-meta.xml
<ListView>
    <fullName>AllAccounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>Business_Id__c</columns>
    <columns>District__c</columns>
    <columns>PARENT_NAME</columns>
    <columns>ACCOUNT.INDUSTRY</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <columns>Account_ServiceProvider__pc</columns>
    <columns>ACCOUNT.LAST_UPDATE</columns>
    <columns>Service_provider__c</columns>
    <filterScope>Everything</filterScope>
    <label>כל הארגונים</label>
</ListView>