force-app/main/default/objects/Account/listViews/SapakeiRishui.listView-meta.xml
<ListView>
    <fullName>SapakeiRishui</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Service_provider__c</field>
        <operation>equals</operation>
        <value>יחידה של זרוע עבודה,ספק רישוי לעיסוק</value>
    </filters>
    <label>ספקי רישוי</label>
</ListView>